--- a/simon.css
+++ b/simon.css
@@ -11,6 +11,7 @@
 
 body {
   margin: 0;
+  padding-top: 20px;
 }
 
 #game {
@@ -21,11 +22,14 @@ body {
   height: 500px;
 }
 
+
 /* colour buttons */
+
 .row {
   padding: 0;
   margin: 0;
 }
+
 .wedge {
   display: inline-block;
   width: 215px;
@@ -37,7 +41,6 @@ body {
 }
 
 #green {
-  background-color: green;
   border-top-left-radius: 100%;
   border-left: 25px solid black;
   border-top: 25px solid black;
@@ -45,8 +48,15 @@ body {
   border-right: 10px solid black;
 }
 
+#green.dark {
+  background-color: green;
+}
+
+#green.light {
+  background-color: #09f40d;
+}
+
 #red {
-  background-color: red;
   border-top-right-radius: 100%;
   border-left: 10px solid black;
   border-top: 25px solid black;
@@ -54,8 +64,15 @@ body {
   border-right: 25px solid black;
 }
 
+#red.dark {
+  background-color: #b72d2d;
+}
+
+#red.light {
+  background-color: red;
+}
+
 #blue {
-  background-color: blue;
   border-bottom-left-radius: 100%;
   border-left: 25px solid black;
   border-top: 10px solid black;
@@ -63,8 +80,15 @@ body {
   border-right: 10px solid black;
 }
 
+#blue.dark {
+  background-color: #020e8e;
+}
+
+#blue.light {
+  background-color: #0497f9;
+}
+
 #yellow {
-  background-color: yellow;
   border-bottom-right-radius: 100%;
   border-left: 10px solid black;
   border-top: 10px solid black;
@@ -72,14 +96,23 @@ body {
   border-right: 25px solid black;
 }
 
+#yellow.dark {
+  background-color: #dda704;
+}
+
+#yellow.light {
+  background-color: yellow;
+}
+
+
 /* controls and display*/
 
 #controls {
   z-index: 1;
   width: 210px;
   height: 210px;
-  left:25%;
-  top:25%;
+  left: 25%;
+  top: 25%;
   background-color: white;
   border: 20px solid black;
   position: absolute;
@@ -108,14 +141,21 @@ body {
 button {
   width: 40px;
   height: 40px;
-  background-color: orange;
-  color: black;
+  background-color: #7f7474;
+  color: white;
+  font-size: 0.7em;
+  text-align: center;
   position: absolute;
   border-radius: 5px;
   border-left: 1px solid black;
   border-top: 1px solid black;
   border-bottom: 3px solid black;
   border-right: 3px solid black;
+}
+
+button:focus {
+  outline: 0;
+  !important;
 }
 
 button.pressed {
@@ -144,6 +184,10 @@ button.pressed {
   top: 105px;
   right: 35px;
   position: absolute;
+}
+
+#strict-indicator.on {
+  background-color: #00FF40;
 }
 
 #display {
